# tlx-toki

./: 1.c  3.c  4-1.c  5.c  CMakeLists.txt  README.md  makefile
.github/workflows/: c-cpp.yml
src/: 2.c  4.c  5.c  main.c
src/KompetitifDasar/01/: A.c  P1.c  P2.c  P3.c  P4.c  header.h
src/KompetitifDasar/02/: A.c  B.c  C.c  D.c  E.c  P1.c  header.c
src/lain-lain/: 1.c  2.c  3.c  4-1.c  4.c  5.c
